--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node dist/index.js",
+    "start:prod": "tsc && node dist/server.js",
+    "start:dev": "ts-node-dev --respawn --transpileOnly ./server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,10 +16,13 @@
     "@types/mongodb": "^3.3.1",
     "@types/mongoose": "^5.5.17",
     "@types/node": "^12.7.5",
+    "ts-node-dev": "^1.0.0-pre.42",
     "tslint": "^5.20.0",
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@types/express": "^4.17.1",
+    "express": "^4.17.1",
     "mongoose": "^5.7.1"
   }
 }
